--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fullcalendar/react": "^6.1.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.3",
     "save-dev": "^0.0.1-security"
   },
   "devDependencies": {
